force-app/main/default/objects/Re_Plastic_Innovations_Plastic_Waste__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Waste collection location</description>
    <inlineHelpText>Waste collection location</inlineHelpText>
    <label>Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>