force-app/main/default/objects/Re_Plastic_Innovations_Plastic_Waste__c/fields/Recycling_Center__c.field-meta.xml
<CustomField>
    <fullName>Recycling_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned recycling center</description>
    <inlineHelpText>Assigned recycling center</inlineHelpText>
    <label>Recycling Center</label>
    <referenceTo>Re_Plastic_Innovations_Recycling_Center__c</referenceTo>
    <relationshipLabel>Re Plastic Innovations Plastic Wastes</relationshipLabel>
    <relationshipName>Re_Plastic_Innovations_Plastic_Wastes</relationshipName>
    <type>Lookup</type>
</CustomField>