force-app/main/default/objects/Re_Plastic_Innovations_Plastic_Waste__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>[&quot;Collected&quot;, &quot;Processing&quot;, &quot;Recycled&quot;]</description>
    <inlineHelpText>[&quot;Collected&quot;, &quot;Processing&quot;, &quot;Recycled&quot;]</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>