force-app/main/default/objects/Re_Plastic_Innovations_Plastic_Waste__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of plastic (PET, HDPE, PVC, etc.)</description>
    <inlineHelpText>Type of plastic (PET, HDPE, PVC, etc.)</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PET</fullName>
            </value>
            <value>
                <fullName>HDPE</fullName>
            </value>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>LDPE</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>