force-app/main/default/objects/Re_Plastic_Innovations_Plastic_Waste__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Weight of plastic waste (kg)</description>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>